# ConformAI

./: .env.example  .env.production.example  .gitignore  ARCHITECTURE.md  GETTING_STARTED.md  LOGGING_GUIDE.md  MIGRATION_TO_OPENAI_OPIK.md  Makefile  PRODUCTION_IMPROVEMENTS_SUMMARY.md  RAG_IMPLEMENTATION_PLAN.md  README.md  RUNNING_THE_APP.md  SECRETS_QUICK_REFERENCE.md  TECHNICAL_IMPLEMENTATION_PLAN.md  app.py  app_demo.py  data_api.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-app.txt  start_demo.sh  test_rag.py
.github/workflows/: deploy.yml  tests.yml
airflow/: Dockerfile  README.md
airflow/dags/: document_processing_dag.py  eu_legal_documents_pipeline.py  eurlex_daily_ingestion.py  eurlex_ingestion_dag.py  eurlex_production_pipeline.py
airflow/scripts/: init-airflow.sh
data/embeddings/: 52020PC0767_embedded.pkl
data/processed/: 32016R0679.pkl  52020PC0767.pkl  52021PC0206.pkl
data/processed/chunks/: 32016R0679_chunks.pkl  52020PC0767_chunks.pkl  52021PC0206_chunks.pkl
data/raw/: 32016R0679.html  32016R0679.xml  52020PC0767.html  52020PC0767.xml  52021PC0206.html  52021PC0206.xml
docs/: AIRFLOW_IMPLEMENTATION_SUMMARY.md  AIRFLOW_QUICKSTART.md  DATA_PIPELINE_LOGGING_SUMMARY.md  GETTING_STARTED.md  GITHUB_SECRETS_SETUP.md  LOGGING_IMPLEMENTATION_SUMMARY.md  MEMORY_SYSTEM.md  README.md  SECURITY.md  TESTING.md
infrastructure/k8s/: README.md
infrastructure/k8s/production/: 03-retrieval-service.yaml
k8s/production/: 02-rag-service.yaml  04-infrastructure.yaml
k8s/staging/: 01-api-gateway.yaml
pages/: 1_📊_Evaluation_Dashboard.py
scripts/: fix_ai_act_embeddings.py  init_memory_database.py  init_project.py  remove_data_from_git.sh  run_data_pipeline.py  run_evaluation.py  run_tests.sh  test_data_pipeline.py
services/api-gateway/: Dockerfile
services/api-gateway/src/: __init__.py  main.py
services/data-pipeline/src/: __init__.py  data_pipeline_logging_utils.py
services/data-pipeline/src/chunking/: __init__.py  legal_chunker.py
services/data-pipeline/src/clients/: __init__.py  eurlex_client.py
services/data-pipeline/src/embeddings/: __init__.py  embedding_generator.py
services/data-pipeline/src/indexing/: __init__.py  qdrant_indexer.py
services/data-pipeline/src/parsers/: __init__.py  legal_parser.py
services/rag-service/: Dockerfile  README.md
services/rag-service/src/agent/: tools.py
services/rag-service/src/api/: conversations.py  health.py  main.py  schemas.py
services/rag-service/src/api/middleware/: __init__.py  auth.py
services/rag-service/src/graph/: graph.py  logging_utils.py  state.py
services/rag-service/src/llm/: client.py
services/retrieval-service/: Dockerfile
services/retrieval-service/src/api/: main.py  schemas.py
services/retrieval-service/src/retrieval/: embedder.py  improved_retriever.py  qdrant_client.py  retriever.py
shared/: __init__.py
shared/config/: __init__.py  settings.py
shared/evaluation/: README.md  __init__.py  datasets.py  metrics.py  opik_evaluator.py
shared/memory/: __init__.py  checkpointer.py  manager.py
shared/models/: __init__.py  conversation.py  legal_document.py
shared/utils/: __init__.py  logger.py  opik_tracer.py
tests/: conftest.py
tests/e2e/: test_api_endpoints.py  test_rag_pipeline.py
tests/evaluation/: README.md  __init__.py  answer_metrics.py  base.py  llm_judge.py  pipeline_evaluator.py  report_generator.py  retrieval_metrics.py  run_evaluation.py
tests/integration/: test_data_pipeline.py  test_rag_pipeline_evaluation.py
tests/test_datasets/: golden_qa_eu_ai_act.json
tests/unit/: test_embeddings.py  test_eurlex_client.py  test_models.py
(+5 files in other folders)
