[project]
name = "conformai"
version = "0.1.0"
description = "RAG-based EU AI Compliance Intelligence System"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "ConformAI Team"}
]
license = {text = "MIT"}
keywords = ["AI", "compliance", "GDPR", "EU AI Act", "RAG", "LangChain", "LangGraph"]

dependencies = [
    # LangChain ecosystem
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-text-splitters>=0.3.0",

    # Observability
    "opik>=1.0.0",

    # LLM providers
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",

    # Vector stores
    "qdrant-client>=1.11.0",
    "langchain-qdrant>=0.2.0",

    # Embeddings & Models
    "sentence-transformers>=3.0.0",
    "transformers>=4.45.0",
    "torch>=2.1.0",
    "tiktoken>=0.5.0",

    # Document processing
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "unstructured>=0.16.0",
    "python-magic>=0.4.27",

    # Airflow
    "apache-airflow>=2.10.0",
    "apache-airflow-providers-http>=4.12.0",
    "apache-airflow-providers-postgres>=5.12.0",
    "apache-airflow-providers-celery>=3.8.0",

    # API & Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",

    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",

    # Redis & Celery
    "redis>=5.0.0",
    "celery>=5.4.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "pyyaml>=6.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Monitoring & Observability
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",

    # Evaluation
    "ragas>=0.2.0",
    "datasets>=3.0.0",

    # Dashboard & Visualization
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",

    # Code quality
    "ruff>=0.7.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",

    # Documentation
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--cov=services",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--asyncio-mode=auto",
]
